add: gateway initial api, change: pruebas_postman
