# gateway_api/app.go
@@ -1,65 +1,0 @@
-package main
-
-import (
-    "encoding/json"
-    "log"
-    "net/http"
-)
-
-// Estructura para las respuestas de autenticación y registro
-type Response struct {
-    Success bool   `json:"success"`
-    Message string `json:"message"`
-    // Otros campos según la respuesta esperada
-}
-
-func main() {
-    r := http.NewServeMux()
-
-    // Manejadores para las rutas de autenticación y registro
-    r.HandleFunc("/auth", authHandler)
-    r.HandleFunc("/register", registerHandler)
-
-    // Inicia el servidor en el puerto 8080
-    log.Fatal(http.ListenAndServe(":8080", r))
-}
-
-func authHandler(w http.ResponseWriter, req *http.Request) {
-    // Redireccionar la solicitud al servicio de autenticación
-    // y obtener la respuesta
-    // Ejemplo de solicitud al servicio de autenticación
-    // resp, err := http.Post("http://servicio_autenticacion:puerto/auth", "application/json", req.Body)
-
-    // Simulación de una respuesta exitosa del servicio de autenticación
-    response := Response{
-        Success: true,
-        Message: "Autenticación exitosa",
-    }
-
-    // Registrar el log para la operación de autenticación
-    log.Println("Operación de autenticación registrada")
-
-    // Enviar la respuesta al cliente
-    w.Header().Set("Content-Type", "application/json")
-    json.NewEncoder(w).Encode(response)
-}
-
-func registerHandler(w http.ResponseWriter, req *http.Request) {
-    // Redireccionar la solicitud al servicio de registro
-    // y obtener la respuesta
-    // Ejemplo de solicitud al servicio de registro
-    // resp, err := http.Post("http://servicio_registro:puerto/register", "application/json", req.Body)
-
-    // Simulación de una respuesta exitosa del servicio de registro
-    response := Response{
-        Success: true,
-        Message: "Registro exitoso",
-    }
-
-    // Registrar el log para la operación de registro
-    log.Println("Operación de registro registrada")
-
-    // Enviar la respuesta al cliente
-    w.Header().Set("Content-Type", "application/json")
-    json.NewEncoder(w).Encode(response)
-}
